--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "ace-builds": "^1.2.5",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
@@ -18,6 +19,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-runtime": "^5.8.38",
     "css-loader": "^0.25.0",
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "cssjson": "^2.1.3",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
