--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "domjson": "^0.1.2",
     "vue": "^2.0.3",
     "vuex": "^2.0.0"
   }
